# auto-io-addon

./: .gitignore  .npmignore  CMakeLists.txt  README.md  launch.json  package-lock.json  package.json
lib/: binding.ts  click.ts  dpi-aware.ts  get-keyboard-layout-list.ts  get-keyboard-layout.ts  get-mouse-position.ts  highlight.ts  hotkey.ts  is-lower.ts  key-codes.ts  key-down.ts  key-up.ts  keyboard-layout.ts  mouse-down.ts  mouse-up.ts  mouse.ts  move.ts  rectangle.ts  screen-capture.ts  set-keyboard-layout.ts  shutdown.ts  sleep.ts  string-conversion.ts  type.ts  unicode-down.ts  unicode-up.ts  window.ts
lib/relative-easing/: bresenham.ts  cubic.ts  index.ts
scripts/: tsconfig.json  upload.js  upload.ts
src/: MMBitmap.c  MMBitmap.h  auto_addon.cc  common.h  inline_keywords.h  types.h
src/dpi-aware/: dpi-aware-api.cc  dpi-aware-api.h
src/events/: events-object.cc  events-object.h
src/get-keyboard-layout/: get-keyboard-layout.cc  get-keyboard-layout.h  sync.cc  sync.h
src/get-keyboard-layout-list/: get-keyboard-layout-list.cc  get-keyboard-layout-list.h  sync.cc  sync.h
src/get-mouse-position/: get-mouse-position.cc  get-mouse-position.h  sync.cc  sync.h
src/highlight-screen/: async.cc  async.h  highlight-screen.cc  highlight-screen.h  sync.cc  sync.h
src/key/: key.cc  key.h
src/key-down/: async.cc  async.h  key-down.cc  key-down.h  sync.cc  sync.h
src/key-up/: async.cc  async.h  key-up.cc  key-up.h  sync.cc  sync.h
src/mouse-down/: async.cc  async.h  mouse-down.cc  mouse-down.h  sync.cc  sync.h
src/mouse-move/: async.cc  async.h  mouse-move.cc  mouse-move.h  sync.cc  sync.h
src/mouse-up/: async.cc  async.h  mouse-up.cc  mouse-up.h  sync.cc  sync.h
src/screen-capture/: screen-capture-api.cc  screen-capture-api.h  screen-capture.cc  screen-capture.h
src/set-keyboard-layout/: async.cc  async.h  set-keyboard-layout.cc  set-keyboard-layout.h  sync.cc  sync.h
src/shutdown/: shutdown-api.cc  shutdown-api.h  shutdown.cc  shutdown.h
src/sleep/: async.cc  async.h  sync.cc  sync.h
src/unicode/: async.cc  async.h  sync.cc  sync.h  unicode.cc  unicode.h
src/window/: window-api.cc  window-api.h  window.cc  window.h
test/: test_binding.js
